database/mariadb-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: database
  labels:
    app: mariadb
  annotations:
    keel.sh/policy: major
    keel.sh/trigger: poll      
    keel.sh/pollSchedule: "@every 4h"
    keel.sh/approvals: "1"
    keel.sh/approvalDeadline: "720"        
spec:
  ports:
    - port: 3306
  selector:
    app: mariadb

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: database
  labels:
    app: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - image: mariadb:latest
        name: mariadb
        ports:
        - containerPort: 3306
          name: mariadb
          hostPort: 3306
          protocol: TCP
        volumeMounts:
        - name: mariadb-data
          mountPath: /var/lib/mysql
      nodeSelector:
        deployDatabase: active    
      volumes:
      - name: mariadb-data
        persistentVolumeClaim:
          claimName: mariadb-data-pvc
