database/phpmyadmin-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: database
  labels:
    app: phpmyadmin
  annotations:
    keel.sh/policy: major
    keel.sh/trigger: poll      
    keel.sh/pollSchedule: "@every 4h"
    keel.sh/approvals: "1"
    keel.sh/approvalDeadline: "720"    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: database
  labels:
    app: phpmyadmin
spec:
  selector:
    app: phpmyadmin
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: web
