database/mariadb-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mariadb
  namespace: database
spec:
  entryPoints:
    - mariadb
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mariadb
          port: 3306
